test/oscar/compiler/errors/mutAlreadyDeclared.oscar
message testNow()


actor Tester() {
  mut int x = 1;
  mut int x = 2;
  
  receive = {
    | testNow() => {
        Println(x);
    }
  }
}

def main() => unit = {
  actor<Tester> tester = spawn actor<Tester>();
  message<testNow>() |> tester;
}